fixed an issue where the ticket summary modal was flowing out of bounds, and continued to extend the new layout to the default and temp layouts as well. Also fixed side scrolling issue on the edit ticket modal

--- a/client/src/styles/modal.css
+++ b/client/src/styles/modal.css
@@ -24,7 +24,7 @@
 
 .modal {
 	max-height:calc(100vh - 150px);
-	overflow: auto;
+	overflow-y: auto;
 }
 
 .modal-content {
